kyverno/alpine.yaml
apiVersion: v1
kind: Pod
metadata:
  name: alp
  labels:
    app: dev
spec:
  containers:
  - image: alpine
    name: alp
    imagePullPolicy: Always
    command:
      - /bin/sh
      - "-c"
      - "sleep 10m"
    securityContext:
      capabilities:
        #drop:
        #- ALL
        add: ["SETUID"]
